@@ -1,9 +1,11 @@
-CHANGES.txt - 2009-01-09
+CHANGES.txt - 2009-01-13
 ------------------------
 
 CHANGES IN CUPS V1.4b3
 
 	- CUPS now conforms to the draft IPP/2.0 and IPP/2.1 specification.
+	- Added a new cupsGetConflicts() API to get a list of conflicting
+	  options.
 	- The PPD compiler didn't localize options or choices that did not
 	  have associated translation text (STR #3045)
 	- Updated the Spanish localization (STR #3043)
